samples/_failures_safe/1761440344_61c932_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ae19c98b.c: In function ‘main’:
./samples/SAFE/__tmp_ae19c98b.c:170:9: error: expected declaration or statement at end of input
  170 |         printf("Failed to initialize decompression buffer.\n");
      |         ^~~~~~
./samples/SAFE/__tmp_ae19c98b.c:170:9: error: expected declaration or statement at end of input
